tests/error/comptime_arg_errors/type_mismatch.err
Error: Type mismatch (at $FILE:12:8)
   | 
10 | @guppy
11 | def main() -> None:
12 |     foo(False)
   |         ^^^^^ Expected argument of type `nat`, got `bool`

Guppy compilation failed due to 1 previous error
